--- a/src/main/resources/templates/mesas/form-mesa.html
+++ b/src/main/resources/templates/mesas/form-mesa.html
@@ -10,6 +10,8 @@
 
 <body class="bg-light">
 
+<th:block th:replace="fragments/navbar :: navbar"></th:block>    
+
 <div class="container mt-5">
 
     <div class="card shadow-sm p-4">
