--- a/src/main/resources/templates/mesas/lista-mesas.html
+++ b/src/main/resources/templates/mesas/lista-mesas.html
@@ -9,6 +9,8 @@
 
 <body class="bg-light">
 
+<th:block th:replace="fragments/navbar :: navbar"></th:block>
+
 <div class="container mt-5">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
