--- a/src/main/resources/templates/reservas/lista-reservas.html
+++ b/src/main/resources/templates/reservas/lista-reservas.html
@@ -13,6 +13,8 @@
 
 <body class="bg-light">
 
+<th:block th:replace="fragments/navbar :: navbar"></th:block>    
+
 <div class="container py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
